--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Titre</title>
+        <link rel="stylesheet" href="style.css" />
+        <title>Reservia</title>
     </head>
 
     <body>
-        <p>Création du projet</p>
+        <header>
+            <img id=logo_reservia src="images/logo/reservia@3x.png" alt="logo de reservia" />
+
+        </header>
     
+        <footer>
+            
+        </footer>
     </body>
 </html>
