--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <meta charset="utf-8" />
@@ -20,7 +20,7 @@
         <nav class="headerNav">
             <a href="#hebergements">Hébergements</a>
             <a href="#activites">Activités</a>
-            <a class="inscription" style="color: #0065FC;" href="#"><strong>S'inscrire</strong></a>
+            <a class="inscription" href="#"><strong>S'inscrire</strong></a>
         </nav>
     </header>
 
@@ -59,7 +59,7 @@
                                 <h4>Auberge de la Cannebière</h4>
                                 <p>Nuit à partir de <strong>25€</strong></p>
                                 <div class="starsPlace">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color: #f2f2f2;"></i>
+                                    <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                                 </div>
                             </div>
                         </a>
@@ -71,7 +71,7 @@
                                 <h4>Hotel du port</h4>
                                 <p>Nuit à partir de <strong>52€</strong></p>
                                 <div class="starsPlace">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                    <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                                 </div>
                             </div>
                         </a>
@@ -83,7 +83,7 @@
                                 <h4>Hôtel les mouettes</h4>
                                 <p>Nuit à partir de <strong>76€</strong></p>
                                 <div class="starsPlace">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color: #f2f2f2;"></i>
+                                    <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                                 </div>
                             </div>
                         </a>
@@ -95,7 +95,7 @@
                                 <h4>Hôtel de la mer</h4>
                                 <p>Nuit à partir de <strong>46€</strong></p>
                                 <div class="starsPlace">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color: #f2f2f2;"></i><i class="fas fa-star" style="color: #f2f2f2;"></i>
+                                    <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i><i class="fas fa-star grey"></i>
                                 </div>
                             </div>
                         </a>
@@ -107,7 +107,7 @@
                                 <h4>Auberge le Panier</h4>
                                 <p>Nuit à partir de <strong>23€</strong></p>
                                 <div class="starsPlace">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color: #f2f2f2;"></i>
+                                    <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                                 </div>
                             </div>
                         </a>
@@ -119,7 +119,7 @@
                                 <h4>Hôtel chez Amina</h4>
                                 <p>Nuit à partir de <strong>96€</strong></p>
                                 <div class="starsPlace">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                    <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                                 </div>
                             </div>
                         </a>
@@ -129,7 +129,7 @@
             </div>
 
             <div class="hostingArticlePopular">
-                <h2>Les plus populaire<i class="fas fa-chart-line" style="color: black;"></i></h2>
+                <h2>Les plus populaire<i class="fas fa-chart-line"></i></h2>
                 <div class="hostingWrapperPopular">
                     <div class="hostingPlacePopular">
                         <a href="images/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">  
@@ -138,7 +138,7 @@
                                 <h4>Hôtel Le soleil du matin</h4>
                                 <p>Nuit à partir de <strong>128€</strong></p>
                                 <div class="stars">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                    <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                                 </div>
                             </div>
                         </a>
@@ -150,7 +150,7 @@
                                 <h4>Au coeur de l'eau Chambres d'hôtes</h4>
                                 <p>Nuit à partir de <strong>71€</strong></p>
                                 <div class="stars">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color: #f2f2f2;"></i>
+                                    <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                                 </div>
                             </div>
                         </a>
@@ -162,7 +162,7 @@
                                 <h4>Hôtel Tout bleu et blanc</h4>
                                 <p>Nuit à partir de <strong>68€</strong></p>
                                 <div class="stars">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star" style="color: #f2f2f2;"></i>
+                                    <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
                                 </div>
                             </div>
                         </a>
