ajustement du CSS pour le responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <img class="logo" src="images/logo/reservia@3x.png" alt="logo de reservia" />
         <nav class="headerNav">
-            <a href="#hebergements">Hébergements</a>
+            <a class="active" href="#hebergements">Hébergements</a>
             <a href="#activites">Activités</a>
             <a class="inscription" href="#"><strong>S'inscrire</strong></a>
         </nav>
@@ -32,7 +32,7 @@
             </div>
             <div class="researchForm">
                 <form method="POST" action="#">
-                    <p><i class="fas fa-map-marker-alt"></i><input class="inputPlace" type="text" name="Lieu" placeholder="Choisissez votre lieu" /><input class="inputResearch" type="submit" value="Rechercher" /></p>
+                    <p><i class="fas fa-map-marker-alt"></i><input class="inputPlace" type="text" name="Lieu" placeholder="Choisissez votre lieu" /><button class="fas fa-search inputResearch hide" type="submit" value="Rechercher"></button><input class="inputResearch" type="submit" value="Rechercher" /></p>
                 </form>
             </div>
             <div class="researchFilters">
