correctif affichage gitlab

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <link href="/fontawesome-free-5.15.1-web/css/fontawesome.css" rel="stylesheet" />
-    <link href="/fontawesome-free-5.15.1-web/css/brands.css" rel="stylesheet" />
-    <link href="/fontawesome-free-5.15.1-web/css/solid.css" rel="stylesheet" />
-    <link href="/fontawesome-free-5.15.1-web/css/regular.css" rel="stylesheet" />
-    <link href="/Raleway/Raleway-VariableFont_wght.ttf" rel="stylesheet" />
-    <link href="/Raleway/Raleway-Italic-VariableFont_wght.ttf" rel="stylesheet" />
+    <link href="./fontawesome-free-5.15.1-web/css/fontawesome.css" rel="stylesheet" />
+    <link href="./fontawesome-free-5.15.1-web/css/brands.css" rel="stylesheet" />
+    <link href="./fontawesome-free-5.15.1-web/css/solid.css" rel="stylesheet" />
+    <link href="./fontawesome-free-5.15.1-web/css/regular.css" rel="stylesheet" />
+    <link href="./Raleway/Raleway-VariableFont_wght.ttf" rel="stylesheet" />
+    <link href="./Raleway/Raleway-Italic-VariableFont_wght.ttf" rel="stylesheet" />
     <title>Reservia</title>
 </head>
 
