--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <header>
         <img class="logo" src="images/logo/reservia@3x.png" alt="logo de reservia" />
         <nav class="headerNav">
-            <a class="active" href="#hebergements">Hébergements</a>
-            <a href="#activites">Activités</a>
+            <div class="navLinks">
+                <a class="active" href="#hebergements"><p class="hostingSpan">Hébergements</p></a>
+                <a class="activityNav" href="#activites"><p class="hostingSpan">Activités</p></a>
+            </div>
             <a class="inscription" href="#"><strong>S'inscrire</strong></a>
         </nav>
     </header>
@@ -43,9 +45,7 @@
                 <div class="buttonFilters"><a href="#"><i class="fas fa-dog"></i><p>Animaux autorisés</p></a></div>
             </div>
             <div class="resultFilters">
-                <p>
-                    <i class="fas fa-info"></i> de 500 logements sont disponibles dans cette ville
-                </p>
+                    <i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
         </section>
         <section class="hosting">
